# Pico-Eurorack

./: .gitattributes  .gitignore  README.md  README_CN.md
.github/workflows/: build-firmware.yml  pages.yml
AudioBootloader/: README.md
AudioBootloader/audio_bootloader/: CMakeLists.txt
AudioBootloader/audio_bootloader/src/: config.h  fsk_codec.cpp  fsk_codec.h  main.cpp  ws2812.pio  ws2812_driver.cpp  ws2812_driver.h
AudioBootloader/tools/audio_bootloader/: fsk_boundary_test.py  make_audio_wav.py  render_linker.py
Bootloader/: boot_config.c  boot_config.h
Bootloader/Calibration/: calibration.c  calibration.h  i2s_lsbj.pio
Bootloader/Selector/: CMakeLists.txt  README.md  selector.c  selector_config.h  ws2812.pio
Bootloader/Tools/: make_slot_memmap.py  pico_boot_apps.py
Client/: README.md  app-config.js  app.js  index.html  server.py  styles.css
Client/scripts/: export_manifest.py  github_action_build.py
Sketches/: README.md
Sketches/Pico/: .compile_status.txt  README.md
Sketches/Pico/16Step_Sequencer/: 16Step_Sequencer.ino  readme.md
Sketches/Pico/16Step_Sequencer/build_150MHz/: 16Step_Sequencer.ino.elf  16Step_Sequencer.ino.map
Sketches/Pico/Braids/: Braids.ino  Braids_150MHz.uf2  readme.md
Sketches/Pico/Braids/build_150MHz/: Braids.ino.elf  Braids.ino.map
Sketches/Pico/Branches/: Branches.ino  readme.md
Sketches/Pico/Branches/build_150MHz/: Branches.ino.elf  Branches.ino.map  Branches.ino.uf2
Sketches/Pico/DejaVu/: DejaVu.ino  DejaVu_150MHz.uf2
Sketches/Pico/DejaVu/build_150MHz/: DejaVu.ino.elf  DejaVu.ino.map
Sketches/Pico/Drums/: DrumModels.h  Drums.ino  readme.md
Sketches/Pico/Drums/build_150MHz/: Drums.ino.elf  Drums.ino.map  Drums.ino.uf2
Sketches/Pico/DualClock/: DualClock.ino  readme.md
Sketches/Pico/DualClock/build_150MHz/: DualClock.ino.elf  DualClock.ino.map
Sketches/Pico/GridsSampler/: GridsSampler.ino  grids4ch_resources2.h
Sketches/Pico/GridsSampler/808samples/: Bd2550.h  Cb.h  Ch.h  Cp.h  Cy1025.h  Ht00.h  Ht10.h  Ht25.h  Ht50.h  Ht75.h  Lc10.h  Lc50.h  Lt00.h  Lt50.h  Lt75.h  Mt10.h  (+5 more)
Sketches/Pico/Grids_Sampler/: Grids_Sampler.ino  Grids_Sampler_150MHz.uf2  grids4ch_resources.h  readme.md
Sketches/Pico/Modal/: Modal.ino  Modal_250MHz.uf2  readme.md
Sketches/Pico/Modulation/: Modulation.ino  lut.h
Sketches/Pico/Moogvoice/: Moogvoice.ino  Moogvoice_200MHz.uf2
Sketches/Pico/MotionRecorder/: MotionRecorder.ino
Sketches/Pico/Motion_Recorder/: readme.md
Sketches/Pico/OneshotSampler/: OneshotSampler.ino
Sketches/Pico/Oneshot_Sampler/: Oneshot_Sampler.ino  samples.h
Sketches/Pico/Plaits/: Plaits.ino  Plaits_250MHz.uf2  README.md
Sketches/Pico/PlaitsFM/: PlaitsFM.ino  PlaitsFM_250MHz.uf2  readme.md
Sketches/Pico/Rings/: Rings.h  Rings.ino
Sketches/Pico/Sequencer/: Sequencer.ino
Sketches/Pico/TripleOSC/: TripleOSC.ino  readme.md
Sketches/Pico/Turing_Machine(WIP)/: Turing_Machine.ino
Sketches/PicoFX/: README.md
Sketches/PicoFX/BeatBreaker/: BeatBreaker.ino
Sketches/PicoFX/Bitcrush/: Bitcrush.ino
Sketches/PicoFX/Chorus/: Chorus.h  Chorus.ino
Sketches/PicoFX/DaisySP_Delay/: DaisySP_Delay.ino
Sketches/PicoFX/DaisySP_Flanger/: DaisySP_Flanger.ino
Sketches/PicoFX/Delay/: Delay.h  Delay.ino
Sketches/PicoFX/Evolution(WIP)/: Evolution.ino  evolution_model.h
Sketches/PicoFX/Flanger/: Flanger.h  Flanger.ino
Sketches/PicoFX/Granular/: Granular.ino
Sketches/PicoFX/Ladderfilter/: Ladderfilter.ino
Sketches/PicoFX/Panner/: Panner.ino
Sketches/PicoFX/Reverb/: Reverb.h  Reverb.ino
Sketches/PicoFX/Sidechain/: Sidechain.ino
Sketches/PicoFX/SpectralSmash/: SpectralSmash.ino
Sketches/Test/Button/: Button.ino
Sketches/Test/Calibration/: Calibration.ino
Sketches/lib/: readme.md
Sketches/lib/2HPicolib/: 2HPico.h  2HPico_io.h  ClickButton.cpp  ClickButton.h  PicoBootConfig.h  scales.h
Sketches/lib/6opFM/: README.md  library.properties
Sketches/lib/RINGS/: README.md
Sketches/lib/Synth_Braids/: synth_braids.h
workers/pico-eurorack-api/: package-lock.json  package.json  wrangler.toml
workers/pico-eurorack-api/src/: index.js
(+221 files in other folders)
